Airbnb clone updated task files

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# These individuals contributed to the hbnb project in this repository 
+#Contributions to the hbnb project in this repository:
 
 Victor Kalenda <victorkalenda@gmail.com>
